Testing topographic training and debugging poor performance

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "7610f358-c488-4391-89e1-f8ad76a65788",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -151,6 +151,7 @@
     "    \n",
     "    def generate_topographic_noise(self):\n",
     "        delta_h = self.dem_patch\n",
+    "        delta_h_zero_mean = delta_h - np.mean(delta_h)\n",
     "        b_perp = np.random.choice(self.baselines)\n",
     "        SLANT_RANGE = 850000\n",
     "        incidence_angle_rad = np.deg2rad(self.incidence_angle_deg)\n",
@@ -160,7 +161,7 @@
     "        if abs(denominator) < 1e-9:\n",
     "            return np.zeros(self.size)\n",
     "\n",
-    "        topo_phase_noise = (numerator / denominator) * delta_h\n",
+    "        topo_phase_noise = (numerator / denominator) * delta_h_zero_mean\n",
     "        return topo_phase_noise\n",
     "\n",
     "    def get_times(self):\n",
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "a3819c4f-1168-4c95-ac16-8d2c1b0b9388",
    "metadata": {
     "tags": []
@@ -240,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -259,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -278,7 +279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -297,7 +298,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -316,7 +317,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -335,7 +336,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -354,7 +355,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -373,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/local/5341212/ipykernel_1362130/3055931754.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -385,7 +386,7 @@
       "Saved sample 230...\n",
       "Saved sample 240...\n",
       "Finished generating for config: log_desc_16_p2. Total samples so far: 240\n",
-      "Data generation complete. Total samples: 240. Manifest saved to DataTop/manifest.csv\n"
+      "Data generation complete. Total samples: 240. Manifest saved to DataTop\\manifest.csv\n"
      ]
     }
    ],
@@ -483,19 +484,11 @@
     "\n",
     "generate_and_save_data()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6e91816-6299-4608-9a5a-106a46e03b5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "KyotoUniverstyResearch",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
