Updated dataset generation to not be dependent on dem, and updated display script to work with new model training

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -41,7 +41,7 @@
     "class Noise2NoiseDataset(Dataset):\n",
     "    def __init__(self, size, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
-    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', dem_path='dem.dehm_be', baseline_type='Sentinel-1'):\n",
+    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', baseline_type='Sentinel-1'):\n",
     "        self.size = size\n",
     "        self.S_max = S_max\n",
     "        self.D = D\n",
@@ -58,14 +58,6 @@
     "        self.baseline_type = baseline_type\n",
     "        self.wavelength = 0.056\n",
     "        self.baselines = self._load_baselines()\n",
-    "        full_dem_data = self._load_dem(dem_path)\n",
-    "\n",
-    "        max_x = full_dem_data.shape[1] - self.size[1]\n",
-    "        max_y = full_dem_data.shape[0] - self.size[0]\n",
-    "        rand_x = np.random.randint(0, max_x)\n",
-    "        rand_y = np.random.randint(0, max_y)\n",
-    "        self.dem_patch = full_dem_data[rand_y:rand_y + self.size[0], \n",
-    "                                rand_x:rand_x + self.size[1]]\n",
     "\n",
     "        self.incidence_angle_deg, self.satellite_azimuth_deg = self._get_orbit_geometry()\n",
     "        self.times = self.get_times()\n",
@@ -150,8 +142,19 @@
     "        return simulated_interferogram\n",
     "    \n",
     "    def generate_topographic_noise(self):\n",
-    "        delta_h = self.dem_patch\n",
-    "        delta_h_zero_mean = delta_h - np.mean(delta_h)\n",
+    "        noise = np.fft.fft2(np.random.randn(*self.size))\n",
+    "        ky = np.fft.fftfreq(self.size[0])\n",
+    "        kx = np.fft.fftfreq(self.size[1])\n",
+    "        kx, ky = np.meshgrid(kx, ky)\n",
+    "        k = np.sqrt(kx**2 + ky**2)\n",
+    "        k[0, 0] = 1e-9\n",
+    "\n",
+    "        power = k ** (-2.0)\n",
+    "        frac_noise = np.fft.ifft2(noise * power).real\n",
+    "\n",
+    "        frac_noise = (frac_noise - frac_noise.mean()) / frac_noise.std()\n",
+    "        delta_h = frac_noise * 5\n",
+    "\n",
     "        b_perp = np.random.choice(self.baselines)\n",
     "        SLANT_RANGE = 850000\n",
     "        incidence_angle_rad = np.deg2rad(self.incidence_angle_deg)\n",
@@ -161,7 +164,7 @@
     "        if abs(denominator) < 1e-9:\n",
     "            return np.zeros(self.size)\n",
     "\n",
-    "        topo_phase_noise = (numerator / denominator) * delta_h_zero_mean\n",
+    "        topo_phase_noise = (numerator / denominator) * delta_h\n",
     "        return topo_phase_noise\n",
     "\n",
     "    def get_times(self):\n",
