--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "7610f358-c488-4391-89e1-f8ad76a65788",
    "metadata": {
     "tags": []
@@ -24,14 +24,16 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from scipy.ndimage import gaussian_filter\n",
     "import math\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -39,7 +41,7 @@
    "outputs": [],
    "source": [
     "class Noise2NoiseDataset(Dataset):\n",
-    "    def __init__(self, size, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
+    "    def __init__(self, size, full_dem, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
     "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', baseline_type='Sentinel-1'):\n",
     "        self.size = size\n",
@@ -57,7 +59,10 @@
     "        self.orbit_type = orbit_type\n",
     "        self.baseline_type = baseline_type\n",
     "        self.wavelength = 0.056\n",
+    "\n",
     "        self.baselines = self._load_baselines()\n",
+    "\n",
+    "        self.full_dem = full_dem\n",
     "\n",
     "        self.incidence_angle_deg, self.satellite_azimuth_deg = self._get_orbit_geometry()\n",
     "        self.times = self.get_times()\n",
@@ -69,12 +74,6 @@
     "        else:\n",
     "            self.total_time = self.times[-1] if self.times[-1] > 0 else 1.0\n",
     "        if self.total_time <=0: self.total_time = 1.0\n",
-    "\n",
-    "    def _load_dem(self, dem_path):\n",
-    "        data_type = np.dtype('>f4')\n",
-    "        raw_data = np.fromfile(dem_path, dtype=data_type)\n",
-    "        dem_data = raw_data.reshape((8102, 8102))\n",
-    "        return dem_data\n",
     "    \n",
     "    def _load_baselines(self):\n",
     "        if self.baseline_type == 'Sentinel-1': \n",
@@ -141,19 +140,23 @@
     "                                  (uz * los_vector_calc[2])\n",
     "        return simulated_interferogram\n",
     "    \n",
-    "    def generate_topographic_noise(self):\n",
-    "        noise = np.fft.fft2(np.random.randn(*self.size))\n",
-    "        ky = np.fft.fftfreq(self.size[0])\n",
-    "        kx = np.fft.fftfreq(self.size[1])\n",
-    "        kx, ky = np.meshgrid(kx, ky)\n",
-    "        k = np.sqrt(kx**2 + ky**2)\n",
-    "        k[0, 0] = 1e-9\n",
+    "    @staticmethod\n",
+    "    def _generate_dem_error(dem_patch, std=5.0):\n",
+    "        smoothed_dem = gaussian_filter(dem_patch, sigma=std)\n",
+    "        roughness = dem_patch - smoothed_dem\n",
     "\n",
-    "        power = k ** (-2.0)\n",
-    "        frac_noise = np.fft.ifft2(noise * power).real\n",
+    "        zero_mean_roughness = roughness - roughness.mean()\n",
     "\n",
-    "        frac_noise = (frac_noise - frac_noise.mean()) / frac_noise.std()\n",
-    "        delta_h = frac_noise * 5\n",
+    "        roughness_std = zero_mean_roughness.std()\n",
+    "        if roughness_std > 1e-9:\n",
+    "            normalized_roughness = zero_mean_roughness / roughness_std\n",
+    "        else:\n",
+    "            normalized_roughness = zero_mean_roughness\n",
+    "        dem_error = normalized_roughness * std\n",
+    "        return dem_error\n",
+    "\n",
+    "    def generate_topographic_noise(self, dem_patch):\n",
+    "        delta_h_map = self._generate_dem_error(dem_patch, std=5.0)\n",
     "\n",
     "        b_perp = np.random.choice(self.baselines)\n",
     "        SLANT_RANGE = 850000\n",
@@ -164,7 +167,7 @@
     "        if abs(denominator) < 1e-9:\n",
     "            return np.zeros(self.size)\n",
     "\n",
-    "        topo_phase_noise = (numerator / denominator) * delta_h\n",
+    "        topo_phase_noise = (numerator / denominator) * delta_h_map\n",
     "        return topo_phase_noise\n",
     "\n",
     "    def get_times(self):\n",
@@ -191,17 +194,29 @@
     "        else: raise ValueError(\"Invalid orbit type.\")\n",
     "\n",
     "    def __getitem__(self, idx):\n",
+    "        max_y = self.full_dem.shape[0] - self.size[0]\n",
+    "        max_x = self.full_dem.shape[1] - self.size[1]\n",
+    "        \n",
+    "        start_y = random.randint(0, max_y)\n",
+    "        start_x = random.randint(0, max_x)\n",
+    "        \n",
+    "        dem_patch = self.full_dem[\n",
+    "            start_y : start_y + self.size[0],\n",
+    "            start_x : start_x + self.size[1]\n",
+    "        ]\n",
+    "\n",
     "        current_time = self.times[idx]\n",
     "        \n",
     "        clean_image = self._get_clean_subsidence_image(current_time)\n",
     "        noise1_random = self.generate_random_noise()\n",
     "        noise1_tropo = self.generate_tropospheric_noise()\n",
-    "        noise1_topo = self.generate_topographic_noise()\n",
+    "        noise1_topo = self.generate_topographic_noise(dem_patch)\n",
     "        noisy_image1 = clean_image + noise1_random + noise1_tropo + noise1_topo\n",
     "        \n",
     "        noise2_random = self.generate_random_noise()\n",
     "        noise2_tropo = self.generate_tropospheric_noise()\n",
-    "        noise2_topo = self.generate_topographic_noise()\n",
+    "        noise2_topo = self.generate_topographic_noise(dem_patch)\n",
+    "        \n",
     "        noisy_image2 = clean_image + noise2_random + noise2_tropo + noise2_topo\n",
     "        clean_image_tensor = torch.from_numpy(clean_image.copy()).float().unsqueeze(0)\n",
     "        noisy_image1_tensor = torch.from_numpy(noisy_image1.copy()).float().unsqueeze(0)\n",
@@ -226,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a3819c4f-1168-4c95-ac16-8d2c1b0b9388",
    "metadata": {
     "tags": []
@@ -244,7 +259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -263,7 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -282,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -301,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -320,7 +335,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -339,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -358,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -377,7 +392,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_25860\\2337912212.py:56: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -406,7 +421,15 @@
     "TOTAL_DAYS = 1460\n",
     "INTERVAL_DAYS = 49\n",
     "\n",
-    "PRECOMPUTED_DATA_ROOT = r\"DataTop\"\n",
+    "PRECOMPUTED_DATA_ROOT = r\"Datasets/TopographicData\"\n",
+    "\n",
+    "def LoadDem(dem_path):\n",
+    "    data_type = np.dtype('>f4')\n",
+    "    raw_data = np.fromfile(dem_path, dtype=data_type)\n",
+    "    dem_data = raw_data.reshape((12602, 11702))\n",
+    "    return dem_data\n",
+    "\n",
+    "DEM = LoadDem('Kyoto-Osaka.dehm') \n",
     "\n",
     "def generate_and_save_data():\n",
     "    print(f\"Starting data generation. Files will be saved to: {PRECOMPUTED_DATA_ROOT}\")\n",
@@ -441,7 +464,7 @@
     "            size=IMG_SIZE, S_max=S_MAX, D=D_DEPTH, nu=NU, cm=CM, V=V_PARAM,\n",
     "            random_noise_std=RANDOM_NOISE_STD, tropospheric_noise_beta=TROPOSPHERIC_NOISE_BETA,\n",
     "            tropospheric_noise_scale=TROPOSPHERIC_NOISE_SCALE, total_days=TOTAL_DAYS,\n",
-    "            interval_days=INTERVAL_DAYS, f_t=config['f_t'], orbit_type=config['orbit'], baseline_type=config['baseline_type']\n",
+    "            interval_days=INTERVAL_DAYS, f_t=config['f_t'], orbit_type=config['orbit'], baseline_type=config['baseline_type'], full_dem=DEM\n",
     "        )\n",
     "        \n",
     "        if len(gen_dataset) == 0:\n",
@@ -470,12 +493,11 @@
     "                    'clean_path': clean_fname\n",
     "                })\n",
     "                global_sample_idx += 1\n",
-    "                if global_sample_idx % 10 == 0: # Print progress\n",
+    "                if global_sample_idx % 10 == 0:\n",
     "                    print(f\"Saved sample {global_sample_idx}...\")\n",
     "\n",
     "            except Exception as e:\n",
     "                print(f\"Error generating/saving sample {global_sample_idx} (original index {i} in config {config['name']}): {e}\")\n",
-    "                # Optionally, decide if you want to skip or halt on error\n",
     "                continue\n",
     "        print(f\"Finished generating for config: {config['name']}. Total samples so far: {global_sample_idx}\")\n",
     "\n",
