Optimized dataset generation

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "7610f358-c488-4391-89e1-f8ad76a65788",
    "metadata": {
     "tags": []
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -41,9 +41,9 @@
    "outputs": [],
    "source": [
     "class Noise2NoiseDataset(Dataset):\n",
-    "    def __init__(self, size, full_dem, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
+    "    def __init__(self, size, full_dem, baselines, wavelength, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
-    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending', baseline_type='Sentinel-1'):\n",
+    "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending'):\n",
     "        self.size = size\n",
     "        self.S_max = S_max\n",
     "        self.D = D\n",
@@ -57,10 +57,8 @@
     "        self.interval_days = interval_days\n",
     "        self.f_t = f_t\n",
     "        self.orbit_type = orbit_type\n",
-    "        self.baseline_type = baseline_type\n",
-    "        self.wavelength = 0.056\n",
-    "\n",
-    "        self.baselines = self._load_baselines()\n",
+    "        self.baselines = baselines\n",
+    "        self.wavelength = wavelength\n",
     "\n",
     "        self.full_dem = full_dem\n",
     "\n",
@@ -75,20 +73,6 @@
     "            self.total_time = self.times[-1] if self.times[-1] > 0 else 1.0\n",
     "        if self.total_time <=0: self.total_time = 1.0\n",
     "    \n",
-    "    def _load_baselines(self):\n",
-    "        if self.baseline_type == 'Sentinel-1': \n",
-    "            baselines_path = 'baselines_sentinel1.txt'\n",
-    "            self.wavelength = 0.056\n",
-    "            col_to_use = 2\n",
-    "        elif self.baseline_type == 'PALSAR-2': \n",
-    "            baselines_path = 'baselines_PALSAR-2.txt'\n",
-    "            self.wavelength = 0.24\n",
-    "            col_to_use = 1\n",
-    "        df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n",
-    "        baselines_list = df.iloc[:, 0].values\n",
-    "        centered_baselines = baselines_list - np.mean(baselines_list)\n",
-    "        return centered_baselines.tolist()\n",
-    "\n",
     "    def __len__(self):\n",
     "        return len(self.times)\n",
     "\n",
@@ -248,18 +232,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting data generation. Files will be saved to: DataTop\n",
-      "Generating data for config: lin_asc_16_s1\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_10732\\394173793.py:30: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n",
+      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_10732\\394173793.py:30: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
      ]
     },
@@ -267,144 +245,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Starting data generation. Files will be saved to: Datasets/TopographicData\n",
+      "Generating data for config: lin_asc_16_s1\n",
       "Saved sample 10...\n",
       "Saved sample 20...\n",
       "Saved sample 30...\n",
       "Finished generating for config: lin_asc_16_s1. Total samples so far: 30\n",
-      "Generating data for config: lin_desc_16_s1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Generating data for config: lin_desc_16_s1\n",
       "Saved sample 40...\n",
       "Saved sample 50...\n",
       "Saved sample 60...\n",
       "Finished generating for config: lin_desc_16_s1. Total samples so far: 60\n",
-      "Generating data for config: lin_asc_16_p2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Generating data for config: lin_asc_16_p2\n",
       "Saved sample 70...\n",
       "Saved sample 80...\n",
       "Saved sample 90...\n",
       "Finished generating for config: lin_asc_16_p2. Total samples so far: 90\n",
-      "Generating data for config: lin_desc_16_p2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Generating data for config: lin_desc_16_p2\n",
       "Saved sample 100...\n",
-      "Saved sample 110...\n",
-      "Saved sample 120...\n",
-      "Finished generating for config: lin_desc_16_p2. Total samples so far: 120\n",
-      "Generating data for config: log_asc_16_s1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved sample 130...\n",
-      "Saved sample 140...\n",
-      "Saved sample 150...\n",
-      "Finished generating for config: log_asc_16_s1. Total samples so far: 150\n",
-      "Generating data for config: log_desc_16_s1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved sample 160...\n",
-      "Saved sample 170...\n",
-      "Saved sample 180...\n",
-      "Finished generating for config: log_desc_16_s1. Total samples so far: 180\n",
-      "Generating data for config: log_asc_16_p2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved sample 190...\n",
-      "Saved sample 200...\n",
-      "Saved sample 210...\n",
-      "Finished generating for config: log_asc_16_p2. Total samples so far: 210\n",
-      "Generating data for config: log_desc_16_p2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\manav\\AppData\\Local\\Temp\\ipykernel_18204\\304409868.py:48: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved sample 220...\n",
-      "Saved sample 230...\n",
-      "Saved sample 240...\n",
-      "Finished generating for config: log_desc_16_p2. Total samples so far: 240\n",
-      "Data generation complete. Total samples: 240. Manifest saved to DataTop\\manifest.csv\n"
+      "Saved sample 110...\n"
      ]
     }
    ],
@@ -429,7 +288,23 @@
     "    dem_data = raw_data.reshape((12602, 11702))\n",
     "    return dem_data\n",
     "\n",
+    "def LoadBaselines(baseline_type='Sentinel-1'):\n",
+    "    if baseline_type == 'Sentinel-1': \n",
+    "        baselines_path = 'baselines_sentinel1.txt'\n",
+    "        wavelength = 0.056\n",
+    "        col_to_use = 2\n",
+    "    elif baseline_type == 'PALSAR-2': \n",
+    "        baselines_path = 'baselines_PALSAR-2.txt'\n",
+    "        wavelength = 0.24\n",
+    "        col_to_use = 1\n",
+    "    df = pd.read_csv(baselines_path, delim_whitespace=True, header=None, usecols=[col_to_use])\n",
+    "    baselines_list = df.iloc[:, 0].values\n",
+    "    centered_baselines = baselines_list - np.mean(baselines_list)\n",
+    "    return centered_baselines.tolist()\n",
+    "\n",
     "DEM = LoadDem('Kyoto-Osaka.dehm') \n",
+    "SENTINEL1_BASELINES = LoadBaselines(baseline_type='Sentinel-1')\n",
+    "PALSAR2_BASELINES = LoadBaselines(baseline_type='PALSAR-2')\n",
     "\n",
     "def generate_and_save_data():\n",
     "    print(f\"Starting data generation. Files will be saved to: {PRECOMPUTED_DATA_ROOT}\")\n",
@@ -442,20 +317,20 @@
     "\n",
     "    dataset_configs = [\n",
     "        # Linear ('f_t': -1), Sentinel-1\n",
-    "        {'name': 'lin_asc_16_s1', 'f_t': -1, 'orbit': 'ascending', 'interval': 16, 'baseline_type': 'Sentinel-1'},\n",
-    "        {'name': 'lin_desc_16_s1', 'f_t': -1, 'orbit': 'descending', 'interval': 16, 'baseline_type': 'Sentinel-1'},\n",
+    "        {'name': 'lin_asc_16_s1', 'f_t': -1, 'orbit': 'ascending', 'interval': 16, 'baselines': SENTINEL1_BASELINES, 'wavelength': 0.056},\n",
+    "        {'name': 'lin_desc_16_s1', 'f_t': -1, 'orbit': 'descending', 'interval': 16, 'baselines': SENTINEL1_BASELINES, 'wavelength': 0.056},\n",
     "\n",
     "        # Linear ('f_t': -1), PALSAR-2\n",
-    "        {'name': 'lin_asc_16_p2', 'f_t': -1, 'orbit': 'ascending', 'interval': 16, 'baseline_type': 'PALSAR-2'},\n",
-    "        {'name': 'lin_desc_16_p2', 'f_t': -1, 'orbit': 'descending', 'interval': 16, 'baseline_type': 'PALSAR-2'},\n",
+    "        {'name': 'lin_asc_16_p2', 'f_t': -1, 'orbit': 'ascending', 'interval': 16, 'baselines': PALSAR2_BASELINES, 'wavelength': 0.24},\n",
+    "        {'name': 'lin_desc_16_p2', 'f_t': -1, 'orbit': 'descending', 'interval': 16, 'baselines': PALSAR2_BASELINES, 'wavelength': 0.24},\n",
     "\n",
     "        # Log ('f_t': f_log), Sentinel-1\n",
-    "        {'name': 'log_asc_16_s1', 'f_t': f_log, 'orbit': 'ascending', 'interval': 16, 'baseline_type': 'Sentinel-1'},\n",
-    "        {'name': 'log_desc_16_s1', 'f_t': f_log, 'orbit': 'descending', 'interval': 16, 'baseline_type': 'Sentinel-1'},\n",
+    "        {'name': 'log_asc_16_s1', 'f_t': f_log, 'orbit': 'ascending', 'interval': 16, 'baselines': SENTINEL1_BASELINES, 'wavelength': 0.056},\n",
+    "        {'name': 'log_desc_16_s1', 'f_t': f_log, 'orbit': 'descending', 'interval': 16, 'baselines': SENTINEL1_BASELINES, 'wavelength': 0.056},\n",
     "\n",
     "        # Log ('f_t': f_log), PALSAR-2\n",
-    "        {'name': 'log_asc_16_p2', 'f_t': f_log, 'orbit': 'ascending', 'interval': 16, 'baseline_type': 'PALSAR-2'},\n",
-    "        {'name': 'log_desc_16_p2', 'f_t': f_log, 'orbit': 'descending', 'interval': 16, 'baseline_type': 'PALSAR-2'},\n",
+    "        {'name': 'log_asc_16_p2', 'f_t': f_log, 'orbit': 'ascending', 'interval': 16, 'baselines': PALSAR2_BASELINES, 'wavelength': 0.24},\n",
+    "        {'name': 'log_desc_16_p2', 'f_t': f_log, 'orbit': 'descending', 'interval': 16, 'baselines': PALSAR2_BASELINES, 'wavelength': 0.24},\n",
     "    ]\n",
     "\n",
     "    for config in dataset_configs:\n",
@@ -464,8 +339,8 @@
     "            size=IMG_SIZE, S_max=S_MAX, D=D_DEPTH, nu=NU, cm=CM, V=V_PARAM,\n",
     "            random_noise_std=RANDOM_NOISE_STD, tropospheric_noise_beta=TROPOSPHERIC_NOISE_BETA,\n",
     "            tropospheric_noise_scale=TROPOSPHERIC_NOISE_SCALE, total_days=TOTAL_DAYS,\n",
-    "            interval_days=INTERVAL_DAYS, f_t=config['f_t'], orbit_type=config['orbit'], baseline_type=config['baseline_type'], full_dem=DEM\n",
-    "        )\n",
+    "            interval_days=INTERVAL_DAYS, f_t=config['f_t'], orbit_type=config['orbit'], baselines=config['baselines'], \n",
+    "            full_dem=DEM, wavelength=config['wavelength'])\n",
     "        \n",
     "        if len(gen_dataset) == 0:\n",
     "            print(f\"Warning: No samples generated for config {config['name']}. Check total_days and interval_days.\")\n",
